deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aspnetmvcapp
    app.kubernetes.io/component: aspnetmvcapp
    app.kubernetes.io/instance: aspnetmvcapp
  name: aspnetmvcapp
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    deployment: aspnetmvcapp
