deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: aspnetmvcapp
    app.kubernetes.io/component: aspnetmvcapp
    app.kubernetes.io/instance: aspnetmvcapp
  name: aspnetmvcapp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: aspnetmvcapp
